<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    app:cardCornerRadius="@dimen/dp_4"
    app:cardElevation="@dimen/dp_4">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/filter"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.3"
            android:background="@color/colorPrimary"
            android:paddingBottom="@dimen/dp_5"
            android:paddingTop="@dimen/dp_5"/>

        <TextView
            android:id="@+id/popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/popular"
            android:textColor="@color/black_text"
            android:textSize="@dimen/sp_12"
            android:background="?attr/selectableItemBackground"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.1"
            android:background="@color/black_text"
            android:paddingBottom="@dimen/dp_5"
            android:paddingTop="@dimen/dp_5"/>

        <TextView
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/rating"
            android:textColor="@color/black_text"
            android:textSize="@dimen/sp_12"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:background="?attr/selectableItemBackground"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.1"
            android:background="@color/black_text"
            android:paddingBottom="@dimen/dp_5"
            android:paddingTop="@dimen/dp_5"/>

        <TextView
            android:id="@+id/newest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/newest"
            android:textColor="@color/black_text"
            android:textSize="@dimen/sp_12"
            android:background="?attr/selectableItemBackground"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.1"
            android:background="@color/black_text"
            android:paddingBottom="@dimen/dp_5"
            android:paddingTop="@dimen/dp_5"/>

        <TextView
            android:id="@+id/nearme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/nearme"
            android:textColor="@color/black_text"
            android:textSize="@dimen/sp_12"
            android:background="?attr/selectableItemBackground"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.1"
            android:background="@color/black_text"
            android:paddingBottom="@dimen/dp_5"
            android:paddingTop="@dimen/dp_5"/>

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/category"
            android:textColor="@color/black_text"
            android:textSize="@dimen/sp_12"
            android:background="?attr/selectableItemBackground"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.1"
            android:background="@color/black_text"
            android:paddingBottom="@dimen/dp_5"
            android:paddingTop="@dimen/dp_5"/>

        <TextView
            android:id="@+id/rated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/highest_rated"
            android:textColor="@color/black_text"
            android:textSize="@dimen/sp_12"
            android:background="?attr/selectableItemBackground"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.1"
            android:background="@color/black_text"
            android:paddingBottom="@dimen/dp_5"
            android:paddingTop="@dimen/dp_5"/>

        <TextView
            android:id="@+id/purchased"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/purchased"
            android:textColor="@color/black_text"
            android:textSize="@dimen/sp_12"
            android:background="?attr/selectableItemBackground"/>

    </LinearLayout>

  </android.support.v7.widget.CardView>