<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/font_n_bg">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/home_cotainer"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/ll_bottom"/>

  <LinearLayout
      android:id="@+id/ll_bottom"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:weightSum="5"
      android:background="@color/colorPrimary"
      android:layout_alignParentBottom="true"
      android:elevation="@dimen/dp_4">
      <TextView
          android:id="@+id/tv_browse"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:padding="@dimen/dp_10"
          android:layout_weight="1"
          android:textColor="@color/font_highlight"
          android:text="@string/browse"
          android:textSize="@dimen/sp_9"
          android:gravity="center_horizontal"
          android:drawableTop="@mipmap/browse"
          android:background="@color/font_n_bg"/>
      <TextView
          android:id="@+id/tv_post"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:padding="@dimen/dp_10"
          android:layout_weight="0.8"
          android:textColor="@color/white"
          android:text="@string/post"
          android:textSize="@dimen/sp_9"
          android:gravity="center_horizontal"
          android:drawableTop="@mipmap/post_white"
          android:background="@color/colorPrimary"/>
      <TextView
          android:id="@+id/tv_my_recipes"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:padding="@dimen/dp_10"
          android:layout_weight="1"
          android:textColor="@color/white"
          android:text="@string/my_recipes"
          android:textSize="@dimen/sp_9"
          android:gravity="center_horizontal"
          android:drawableTop="@mipmap/myrecipe_white"
          android:background="@color/colorPrimary"/>
      <TextView
          android:id="@+id/tv_groceries"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:padding="@dimen/dp_10"
          android:layout_weight="1"
          android:textColor="@color/white"
          android:text="@string/groceries"
          android:textSize="@dimen/sp_9"
          android:gravity="center_horizontal"
          android:drawableTop="@mipmap/grociries_white"
          android:background="@color/colorPrimary"/>
      <TextView
          android:id="@+id/tv_home"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:padding="@dimen/dp_10"
          android:layout_weight="1.2"
          android:textColor="@color/white"
          android:text="@string/home_cooks"
          android:textSize="@dimen/sp_9"
          android:gravity="center_horizontal"
          android:drawableTop="@mipmap/home_white"
          android:background="@color/colorPrimary"/>
  </LinearLayout>
</RelativeLayout>
