<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.homecookie.Fragments.SignUpFragment">
    <TextView
        android:id="@+id/tv_help"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:padding="@dimen/dp_10"
        android:layout_alignParentRight="true"/>

    <ImageView
        android:id="@+id/iv_login_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"
        android:layout_margin="@dimen/dp_10"
        android:layout_below="@id/tv_help"
        android:layout_centerInParent="true"/>

    <EditText
        android:id="@+id/et_email_or_id"
        android:layout_below="@id/iv_login_icon"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:inputType="textWebEmailAddress"
        android:hint="@string/email"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/sp_15"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:background="@drawable/edit_text_drawable"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_below="@+id/et_email_or_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:hint="@string/password"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/sp_15"
        android:inputType="textWebPassword"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:background="@drawable/edit_text_drawable"/>
    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_below="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:hint="@string/confirm_password"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/sp_15"
        android:inputType="textWebPassword"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:background="@drawable/edit_text_drawable"/>
    <Button
        android:id="@+id/button_sign_up"
        android:layout_below="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@drawable/button_bg_drawable"
        android:textSize="@dimen/sp_16"
        android:text="@string/sign_up"
        android:textColor="@drawable/button_bg_drawable"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/tv_acc_exist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_sign_up"
        android:textSize="@dimen/sp_14"
        android:padding="@dimen/dp_10"
        android:text="Already Have an Account?"/>
    <Button
        android:id="@+id/button_sign_in"
        android:layout_below="@+id/tv_acc_exist"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@drawable/button_bg_drawable_login"
        android:textSize="@dimen/sp_16"
        android:text="@string/sign_in"
        android:textColor="@drawable/button_bg_drawable_login"
        android:textAllCaps="false"/>

</RelativeLayout>
