<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/comment_option_bg_drawable">
    <LinearLayout
        android:id="@+id/ll_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20">
        <TextView
            android:id="@+id/tv_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/sp_16"
            android:text="@string/report"
            android:gravity="center"
            android:textColor="@color/black_text"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20">
        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/sp_16"
            android:text="@string/edit"
            android:gravity="center"
            android:textColor="@color/black_text"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20">
        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/sp_16"
            android:text="@string/del"
            android:gravity="center"
            android:textColor="@color/red_color"/>
    </LinearLayout>


</LinearLayout>