<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.homecookie.Fragments.ForgotPasswordFragment">
    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textSize="@dimen/sp_20"
        android:layout_alignParentTop="true"
        android:padding="@dimen/dp_10"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"/>
    <ImageView
        android:id="@+id/iv_create_id_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"
        android:layout_marginTop="@dimen/dp_80"
        android:layout_marginBottom="@dimen/dp_40"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_below="@id/iv_create_id_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:inputType="textWebEmailAddress"
        android:hint="@string/enter_email"
        android:padding="@dimen/dp_12"
        android:textSize="@dimen/sp_16"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:background="@drawable/edit_text_drawable"/>
    <Button
        android:id="@+id/button_submit"
        android:layout_below="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@drawable/button_bg_drawable"
        android:textSize="@dimen/sp_16"
        android:text="@string/submit"
        android:textColor="@drawable/button_bg_drawable"
        android:textAllCaps="false"/>

</RelativeLayout>
